// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventStateInfo should render with one class 1`] = `
<div
  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-olph29-MuiGrid2-root"
>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 css-1ojdex-MuiGrid2-root"
  />
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    2
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    3
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    1
  </div>
</div>
`;

exports[`EventStateInfo should render with two classes 1`] = `
<div
  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-olph29-MuiGrid2-root"
>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-12i7t8b-MuiGrid2-root"
  >
    ALO
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-4 css-1qvf8lj-MuiGrid2-root"
  >
    eeeeee d.M.
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    2
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    3
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    1
  </div>
</div>
`;

exports[`EventStateInfo should render without classes 1`] = `
<div
  class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-auto css-olph29-MuiGrid2-root"
>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-6 css-1ojdex-MuiGrid2-root"
  />
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    2
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    3
  </div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-2 css-sh76jz-MuiGrid2-root"
  >
    1
  </div>
</div>
`;
